--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "ada-store",
+  "name": "react-slack-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-bootstrap": "1.0.0-beta.9",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
+    "axios": "^0.19.0",
+    "emoji-mart": "^2.6.1",
+    "firebase": "^5.11.1",
+    "md5": "^2.2.1",
+    "mime-types": "^2.1.20",
+    "moment": "^2.22.2",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-avatar-editor": "^11.0.4",
+    "react-color": "^2.14.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.82.1"
+    "semantic-ui-react": "^0.82.1",
+    "uuid": "^3.3.2",
+    "react-background-video-player": "^1.1.6",
+    "react-bootstrap": "1.0.0-beta.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
