--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "emoji-mart": "^2.6.1",
     "firebase": "^5.11.1",
     "md5": "^2.2.1",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
     "react-avatar-editor": "^11.0.4",
+    "react-background-video-player": "^1.1.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-color": "^2.14.1",
+    "react-dom": "^16.7.0-alpha.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
@@ -20,9 +25,7 @@
     "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
-    "uuid": "^3.3.2",
-    "react-background-video-player": "^1.1.6",
-    "react-bootstrap": "1.0.0-beta.9"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
